# facemodule

./: FaceDetect.cpp  FaceDetect.h  Makefile.am  configure.in  install.sh
FaceModule.xcodeproj/: project.pbxproj
FaceModule.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FaceModule.xcodeproj/project.xcworkspace/xcuserdata/kaede.xcuserdatad/: UserInterfaceState.xcuserstate
FaceModule.xcodeproj/xcuserdata/kaede.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
FaceModule.xcodeproj/xcuserdata/kaede.xcuserdatad/xcschemes/: FaceModule.xcscheme  xcschememanagement.plist
